--- a/src/components/video.css
+++ b/src/components/video.css
@@ -1,4 +1,4 @@
-.fullscreen-bg {
+/* .fullscreen-bg {
     position: fixed;
     top: 0;
     right: 0;
@@ -19,4 +19,37 @@
     height: 100%;
     zoom: none;
     background: rgba(0, 0, 0, 0.50);
+} */
+
+.Container {
+    position: relative;
+    min-height: 300px;
+    max-height: 800px;
+    overflow: hidden;
+    margin-bottom: 500px;
 }
+
+/* Style the video: 100% width and height to cover the entire window */
+.Video {
+    width: 100%;
+    height: 100%;
+  }
+  
+  /* Add some content at the bottom of the video/page */
+  .Content {
+    position: absolute;
+    top: 0;
+    color:#f1f1f1;
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+  }
+  .SubContent {
+      text-align: center;
+      padding: 10px;
+    }
+
